--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:27.1.0'
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.squareup.picasso:picasso:2.71828'
 }
